src/app/components/select-many/select-many.module.scss
$main-color: #70C05B;
$selected-item-color: #FCD5BA;
$bar-item-color: #FF6633;
$icon-size: 24px;

@mixin radius {
  border-radius: 4px;
}

.select-many {
  @include radius;
  border-width: 1px;
  border-color: $main-color;
  border-style: solid;

  display: flex;
  flex-direction: column;
  box-shadow: 4px 8px 16px rgba($main-color, 0.2);
}
.select-many__item {
  width: 246px;
  padding: 8 8 8 16;
}
.select-many__item__selected {
  background-color: $selected-item-color;
}
.select-many__bar {
  display: flex;
  padding: 8px;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}
.select-many__bar__items {
  display: flex;
  gap: 2px;
  flex-direction: row;
}
.select-many__bar__selected {
  @include radius;
  color: white;
  display: flex;
  align-items: center;
  padding: 0 0 0 8px;
  background-color: $bar-item-color;
}
.select-many__bar__items__selecting-item {
  display: flex;
  align-items: center;
}

